// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdatedTimestamp does not show the timestamp within the first minute after the last update 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa bLzRZB"
    />
  </div>
</body>
`;

exports[`UpdatedTimestamp shows timestamp with an overrided color 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa bLzRZB"
    >
      <div
        class="sc-bwzfXH jZDdnH"
        color="yellow"
        data-testid="DateTimeUpdated"
      >
        Updated 
        February 28, 
        9.00am
      </div>
    </div>
  </div>
</body>
`;
